--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.4",
     "tailwindcss": "^4.1.4"
   }
 }
